# ewallet

./: .dockerignore  .gitignore  Cargo.toml  README.md  biome.json  lerna.json  package.json
credential_vault/cv_interface/: curve_type.d.ts  key_share.d.ts  package.json  response.d.ts  tsconfig.json  wallet.d.ts  witnessed_id_tokens.js
credential_vault/docker/: credential_vault.Dockerfile  docker-compose.yml
credential_vault/pg_interface/: package.json  tsconfig.json
credential_vault/server/: credential_vault.env.example  credential_vault_2.env.example  package.json
crypto/bytes/: package.json  tsconfig.browser.json  tsconfig.node.json
crypto/sss/: jest.config.mjs  package.json  tsconfig.json
crypto/tecdsa/sandbox/: Cargo.toml
crypto/tecdsa/sandbox/src/: main.rs
documentation/: how_it_works.md  key_share_node.md  node_upgrade.md
examples/: README.md
examples/cosmos-nextjs/: .env.example  README.md  package.json
examples/evm-nextjs/: .env.example  README.md  package.json
examples/evm-wagmi-nextjs/: .env.example  README.md  package.json
examples/multi-ecosystem-react/: .env.example  README.md  index.html  package.json
internals/ci/: package.json
key_share_node/docker/: credential_vault.Dockerfile  docker-compose.yml  env.example  key_share_node.Dockerfile
key_share_node/ksn_interface/: package.json  tsconfig.json
key_share_node/pg_interface/: package.json  tsconfig.json
key_share_node/server/: .gitignore  README.md  credential_vault_2.env.example  jest.config.mjs  key_share_node.env.example  package.json  (+3 more)
stdlib_js/: package.json
(+632 files in other folders)
